# oh-my-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  configure.py  create_subagent_handlers.py  oh-my-mcp.spec  pyproject.toml  pytest.ini  verify_changes.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/assets/: RELEASE_NOTES.md  USAGE.md
.github/workflows/: build-release.yml  issue-validator.yml  lint.yml  tests.yml
docs/: ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CLEANUP_2026-02-11.md  CONFIGURATION_GUIDE_CN.md  CONFIGURE_CN.md  DOCUMENTATION_MAP.md  INSTALLATION.md  PROJECT_REORGANIZATION.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  SUBAGENT_CONFIG.md  SUBAGENT_ENABLE_UPDATE.md  TEST_REPORT.md
docs/en/: ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  PROJECT_STRUCTURE.md
docs/zh/: BROWSER_CONFIG_GUIDE.md  BROWSER_CONFIG_QUICKSTART.md  CONFIGURATION_GUIDE_CN.md  SEARCH_ADVANCED.md  SETUP_GUIDE.md  SUBAGENT_CONFIG.md  SUBAGENT_GUIDE.md
examples/: README.md  basic_usage.py  browser_config_wizard.py  browser_usage_example.py  file_operations_example.py  subagent_config_example.py  subagent_usage_example.py  web_search_example.py
src/mcp_server/: __init__.py  command_executor.py  main.py  utils.py
src/mcp_server/cli/: __init__.py  config.py
src/mcp_server/tools/: __init__.py  compression.py  data.py  file.py  pylance.py  python.py  registry.py  search_engine.py  subagent.py  subagent_config.py  system.py  text.py  utility.py  uv.py  web.py
src/mcp_server/tools/browser/: __init__.py  browser_config.py  config.yaml  handlers.py  session_manager.py
src/mcp_server/tools/compression/: __init__.py  config.yaml  handlers.py
src/mcp_server/tools/data/: __init__.py  config.yaml  handlers.py
src/mcp_server/tools/file/: __init__.py  config.yaml  handlers.py
src/mcp_server/tools/subagent/: __init__.py  config.yaml  handlers.py
src/mcp_server/tools/system/: __init__.py  config.yaml  handlers.py
src/mcp_server/tools/text/: __init__.py  config.yaml  handlers.py
src/mcp_server/tools/utility/: __init__.py  config.yaml  handlers.py
src/mcp_server/tools/web/: __init__.py  config.yaml  handlers.py
tests/: __init__.py  conftest.py  test_browser.py  test_command_executor.py  test_compression.py  test_data.py  test_file.py  test_pylance.py  test_python.py  test_subagent_no_billing.py  test_system.py  test_text.py  test_utility.py  test_uv.py  test_web.py
