[project]
name = "mcp-server"
version = "0.1.0"
description = "Comprehensive MCP server with 95+ practical tools across 10 categories"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "quyansiyuanwang", email = "qysyw-team@qq.com" }]

keywords = [
    "mcp",
    "model-context-protocol",
    "tools",
    "web-search",
    "file-operations",
    "data-processing",
    "python-development",
    "system-utilities",
    "uv",
    "pylance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastmcp>=2.14.5",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=1.0.0",
    "python-dateutil>=2.8.2",
    "psutil>=5.9.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "pyinstaller>=6.18.0",
]

[project.urls]
Homepage = "https://github.com/quyansiyuanwang/mcp-server"
Documentation = "https://github.com/quyansiyuanwang/mcp-server/tree/main/docs"
Repository = "https://github.com/quyansiyuanwang/mcp-server.git"
Issues = "https://github.com/quyansiyuanwang/mcp-server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-server = "mcp_server.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
exclude = ["build/", "dist/", "tests/fixtures/"]

[tool.uv.workspace]
members = ["test_uv_project"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pyinstaller>=6.18.0",
    "types-psutil>=7.2.2.20260130",
    "types-python-dateutil>=2.9.0.20260124",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
]
